# arkanoid-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  arkanoid.afdesign  arkanoid.psd  denow.json  index.html  nodemon.json  package-lock.json  package.json  start.ts  tsconfig.json
examples/: arkanoid.rs
examples/_entities/: grid.rs  mod.rs
examples/arkanoid/: camera.rs  main.rs
examples/arkanoid2/: camera.rs  main.rs
examples/binding/: binding.vert.spv  main.rs
examples/common/: mod.rs  traits.rs
examples/drawables/: mod.rs
examples/entities/: ball.rs  mod.rs  player.rs
examples/quad/: main.rs  quad.frag  quad.vert
examples/texture/: main.rs  texture.frag  texture.frag.spv  texture.vert
examples/triangle/: main.rs  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
js/: main.js
public/: index.html
public/scripts/: canvas.ts  context.ts  events.ts  mod.ts  sys.ts  utils.ts  wasm.ts
scripts/: canvas.js  events.js  export-interface.js  fns.js  main.js  renderer.js  sys.js  utils.js  wasm.js
src/: context.rs  event.rs  ffi.rs  frame.rs  lib.rs  main.rs  scene.rs  transform.rs  utils.rs
src/event/: key.rs  mod.rs
src/ffi/: str_map.rs
src/graphic/: binding.rs  blend.rs  gpu.rs  mod.rs  shader.rs  surface.rs  texture.rs  utils.rs  vertex_attribute.rs  vertex_buffer.rs
src/math/: circle.rs  intersection.rs  line.rs  mod.rs  rect.rs  size.rs  vec2.rs
src/utils/: mod.rs
src/wasm/: application.rs  canvas.rs  console.rs  key.rs  mod.rs  (+1 more)
tasks/: compile.ts  server.ts  watch.ts
ts/: export-interface.ts  main.ts  utils.ts
(+69 files in other folders)
