[package]
name = "fine"
version = "0.1.0"
authors = ["Christophe MASSOLIN <christophe.massolin@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
wgpu = "0.5.0"
raw-window-handle = "0.3.3"
bytemuck = "1.2.0"
png = "0.16.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.62"
wasm-bindgen-futures = "0.4.12"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }